setting changes from dev to production mode

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI = mongodb+srv://git:tanolepro1@cluster0.ewjmp8n.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
 JWT_SECRET = gaet
+NODE_ENV = production
