--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,12 @@
     "react-scripts": "5.0.1",
     "react-scrollable-feed": "^1.3.2",
     "socket.io-client": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/preset-env": "7.22.5",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
