--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "gaet",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
